# web-hw06-create-table

./: README.md  Script-select-hw.sql  pyproject.toml  query_1.sql  query_10.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds.py  web-hw6-select.sqlite
